Changing back the folder structure

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body::before {
   left: 0; 
   width: 100vw; 
   height: 100vh; 
-  background-image: url('images/background.png');
+  background-image: url('https://images.unsplash.com/photo-1732985371646-ed86adef5b55?q=80&w=2016&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
    background-repeat: no-repeat; 
    background-position: center; 
@@ -72,6 +72,11 @@ h1 {
   font-family: 'Pacifico', cursive;
   animation: dropIn 1s ease-out; /* Animation for the header */
 }
+h2{
+  color: gray;
+  animation: fadeIn 1s ease-out;
+  font-family: 'Pacifico', cursive;
+}
 
 .input-button-container {
   display: flex;
@@ -90,6 +95,7 @@ h1 {
   width: 300px;
   opacity: 0;
   animation: fadeIn 1s ease-out 1s forwards; /* Animation for input container */
+  z-index : 1;
 }
 
 .input {
@@ -177,9 +183,10 @@ h1 {
 }
 
 .recipe-card h2 {
-  font-size: 18px;
+  font-size: 16px;
   margin: 0;
   color: #8C2B9F;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p {
@@ -202,7 +209,10 @@ p {
       width: 80%;
     } 
     .input-container { 
-      width: 80%;
-      margin-right: 20px; 
+      width: 80%; 
     } 
+    h2 {
+      font-size: small;
+      font-family: 'Pacifico', cursive;
+    }
   }
